--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@
 -->
 
 
-  <model-viewer id="componentToHide" alt="Tester Model" src="./assets/sphere101.glb" ar environment-image="" poster=""
+  <model-viewer id="componentToHide" alt="Tester Model" src="./assets/sharpnels.glb" ar environment-image="" poster=""
     autoplay shadow-intensity="1" shadow-intensity="1" ar skybox-height="2m" max-camera-orbit="auto 90deg auto"
     camera-controls touch-action="pan-y"
     camera-orbit="calc(90rad + env(window-scroll-y) * 15rad) calc(90deg) 5m"></model-viewer>
