--- a/index.html
+++ b/index.html
@@ -1630,7 +1630,7 @@
     <div class="container">
       <div class="marquee-block tablet-column activate">
         <div class="marquee-heading mh-alt-mode">
-          <div class="marquee-title">Find Boe</div>
+          <div class="marquee-title">$OMINI</div>
         </div>
         <div class="marquee-frame">
           <div class="marquee-frame-shadows"></div>
