--- a/index.html
+++ b/index.html
@@ -350,7 +350,9 @@
 
                 /* The .element is a class of the HTML element you want to hide the scrollbar for */
             </style>
-            <h1>Proceed to <a href="/main.html">Ominiscience &rarr;</a></h1>
+            <a href="/main.html">
+                <h1>Proceed to Ominiscience &rarr;</h1>
+            </a>
 
 
 
