--- a/main.html
+++ b/main.html
@@ -1285,6 +1285,12 @@
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navbar-4 site-header w-nav">
     <style>
+      label {
+        width: -moz-fit-content;
+        width: fit-content;
+
+      }
+
       .clear {
         clear: both;
       }
@@ -1306,14 +1312,14 @@
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(20px);
         -webkit-backdrop-filter: blur(20px);
-        padding: 20px;
+        padding: 10px 20px;
       }
 
       @media screen and (min-width: 500px) {
-        .slidemenu label {
+        /* .slidemenu label {
           width: 20%;
           padding: 20px;
-        }
+        } */
 
 
         .slider {
