--- a/main.html
+++ b/main.html
@@ -2073,9 +2073,7 @@
         </div>
         <div class="grid-column grid-column--special"><a rel="noopener noreferrer nofollow" href="" target="_blank"
             class="popular-logo-link w-inline-block"><img src="./assets/uniswap.png" loading="lazy" width="114"
-              height="40" alt="" class="image-1031" /><img
-              src="https://assets-global.website-files.com/64354b8ce4872ad8cd1c7b04/646b5902f6907682fcf69385_badge-popular.svg"
-              loading="lazy" width="61" height="26" alt="" class="badge-popular" /></a></div>
+              height="40" alt="" class="image-1031" /></a></div>
       </div>
       <!-- <div data-w-id="5b81ee13-745d-9c7e-0e5f-5c7cb5eb357e" style="opacity:0" class="marquee-block activate">
         <div class="marquee-heading mh-not-visible">
