--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="./unfavicon.jpg" type="image/x-icon">
+
 </head>
 
 <body>
@@ -358,8 +360,8 @@
 
 
             <p>Drag, scroll, or click the elements above. <i id="pause-button" class="fas fa-pause"></i></p>
-            <button id="sphere">SPHERE</button>
-            <button id="helix">HELIX</button>
+            <button style="display: none;" id="sphere">SPHERE</button>
+            <button style="display: none;" id="helix">HELIX</button>
             <button style="display: none;" id="grid">GRID</button>
             <button style="display: none;" id="table">TABLE</button>
 
@@ -378,9 +380,9 @@
                             <li><a href="https://t.me/" rel="nofollow noopener noreferrer" target="_blank"><i
                                         class="bx bxl-telegram"></i></a></li>
                             <li><a href="" rel="nofollow noopener noreferrer" target="_blank"><i
-                                        class="bx bxl-facebook"></i></a></li>
-                            <li><a href="" rel="nofollow noopener noreferrer" target="_blank"><i
-                                        class='bx bxl-tiktok'></i></a></li>
+                                        class='bx bx-book-bookmark'></i></a></li>
+                            <!-- <li><a href="" rel="nofollow noopener noreferrer" target="_blank"><i
+                                        class='bx bxl-tiktok'></i></a></li> -->
 
                         </ul>
                     </div>
