--- a/home.html
+++ b/home.html
@@ -1795,25 +1795,27 @@
               }
             </style>
           </div>
-          <div class="js-marquee-awards-clone">
-            <div class="marquee-content align-stretch">
-              <a rel="noopener noreferrer nofollow" href="#" target="_blank" class="awards-item w-inline-block">
-                <div class="awards-logo"><img src="./assets/uniswap.png" loading="lazy" width="148" height="56"
-                    alt="UNiswap Logo" class="awards-logo-img" /></div>
-                <div class="awards-name">Uniswap</div>
-              </a>
-              <a rel="noopener noreferrer nofollow" href="" target="_blank" class="awards-item w-inline-block">
-                <div class="awards-logo"><img src="./assets/twitter.png" loading="lazy" width="148" height="58" alt=""
-                    class="awards-logo-img" /></div>
-                <div class="awards-name">Twitter</div>
-              </a>
-              <a rel="noopener noreferrer nofollow" href="" target="_blank" class="awards-item w-inline-block">
-                <div class="awards-logo"><img src="./assets/telegram.png" loading="lazy" width="148" height="58"
-                    alt=", Catalyst Award" class="awards-logo-img" /></div>
-                <div class="awards-name">Telegram</div>
-              </a>
+          <marquee behavior="" direction="">
+            <div class="js-marquee-awards-clone">
+              <div class="marquee-content align-stretch">
+                <a rel="noopener noreferrer nofollow" href="#" target="_blank" class="awards-item w-inline-block">
+                  <div class="awards-logo"><img src="./assets/uniswap.png" loading="lazy" width="148" height="56"
+                      alt="UNiswap Logo" class="awards-logo-img" /></div>
+                  <div class="awards-name">Uniswap</div>
+                </a>
+                <a rel="noopener noreferrer nofollow" href="" target="_blank" class="awards-item w-inline-block">
+                  <div class="awards-logo"><img src="./assets/twitter.png" loading="lazy" width="148" height="58" alt=""
+                      class="awards-logo-img" /></div>
+                  <div class="awards-name">Twitter</div>
+                </a>
+                <a rel="noopener noreferrer nofollow" href="" target="_blank" class="awards-item w-inline-block">
+                  <div class="awards-logo"><img src="./assets/telegram.png" loading="lazy" width="148" height="58"
+                      alt=", Catalyst Award" class="awards-logo-img" /></div>
+                  <div class="awards-name">Telegram</div>
+                </a>
+              </div>
             </div>
-          </div>
+          </marquee>
         </div>
       </div>
     </div>
