--- a/home.html
+++ b/home.html
@@ -1640,11 +1640,11 @@
                     loading="lazy" alt="" class="corner-img" /></div>
               </div>
               <div class="hero-slider-inner">
-                <h1 class="paragraph-3 js-typewrite anim-typewrite" style="padding: 10px; font-size: 50px;">Unanimous
+                <h1 class="paragraph-3 js-typewrite anim-typewrite" style="padding: 10px; font-size: 50px;">UnAnon
                 </h1>
                 <script>
                   var i = 0;
-                  var txt = 'Unanimous';
+                  var txt = 'UnAnon';
 
                   function typeWriter() {
                     if (i < txt.length) {
