--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
 
                             <li><a href="https://twitter.com/" rel="nofollow noopener noreferrer" target="_blank"><i
                                         class="bx bxl-twitter"></i></a></li>
-                            <li><a href="https://t.me/" rel="nofollow noopener noreferrer" target="_blank"><i
-                                        class="bx bxl-telegram"></i></a></li>
+                            <li><a href="https://t.me/UnAnonPortal" rel="nofollow noopener noreferrer"
+                                    target="_blank"><i class="bx bxl-telegram"></i></a></li>
                             <li><a href="" rel="nofollow noopener noreferrer" target="_blank"><i
                                         class='bx bx-book-bookmark'></i></a></li>
                             <!-- <li><a href="" rel="nofollow noopener noreferrer" target="_blank"><i
