--- a/home.html
+++ b/home.html
@@ -161,9 +161,9 @@
     type="text/javascript">WebFont.load({ google: { families: ["Roboto Mono:regular", "Roboto Mono:500"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="" rel="shortcut icon" type="image/x-icon" />
-  <link href="" rel="apple-touch-icon" />
-  <link href="" rel="canonical" />
+  <link href="./unfavicon.jpg" rel="shortcut icon" type="image/x-icon" />
+  <link href="./unfavicon.jpg" rel="apple-touch-icon" />
+  <link href="./unfavicon.jpg" rel="canonical" />
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -1147,9 +1147,58 @@
 
   <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
+  <style>
+    /* CSS */
+    .button-89 {
+      --b: 3px;
+      /* border thickness */
+      --s: .45em;
+      /* size of the corner */
+      --color: #fff;
+      z-index: 100 !important;
+
+      padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+      color: var(--color);
+      --_p: var(--s);
+      background:
+        conic-gradient(from 90deg at var(--b) var(--b), #0000 90deg, var(--color) 0) var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+      transition: .3s linear, color 0s, background-color 0s;
+      outline: var(--b) solid #0000;
+      outline-offset: .6em;
+      font-size: 16px;
+
+      border: 0;
+
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+
+      position: fixed;
+      top: 5%;
+      right: 1%;
+    }
+
+    .button-89:hover,
+    .button-89:focus-visible {
+      --_p: 0px;
+      outline-color: var(--color);
+      outline-offset: .05em;
+    }
+
+    .button-89:active {
+      background: var(--color);
+      color: #fff;
+    }
+  </style>
+
 </head>
 
 <body class="home-page">
+
+  <!-- HTML !-->
+  <a href="http://www.unanon.live/" target="_blank" rel="noopener noreferrer">
+    <button class="button-89" role="button">Launch Dapp</button>
+  </a>
 
   <audio id="backgroundMusic" autoplay loop>
     <source src="./scifi.mp3" type="audio/mpeg">
@@ -1543,7 +1592,7 @@
 
   <style>
     model-viewer {
-      z-index: 10;
+      /* z-index: 10; */
       position: fixed;
 
       top: 50%;
@@ -1606,7 +1655,7 @@
 
 
   <model-viewer id="componentToHide" alt="Tester Model" src="./assets/sharpnels.glb" ar environment-image="" poster=""
-    autoplay shadow-intensity="1" shadow-intensity="1" ar skybox-height="2m" max-camera-orbit="auto 90deg auto"
+    autoplay shadow-intensity="1" shadow-intensity="1" skybox-height="2m" max-camera-orbit="auto 90deg auto"
     camera-controls touch-action="pan-y"
     camera-orbit="calc(90rad + env(window-scroll-y) * 15rad) calc(90deg) 5m"></model-viewer>
 
@@ -1808,7 +1857,8 @@
                       class="awards-logo-img" /></div>
                   <div class="awards-name">Twitter</div>
                 </a>
-                <a rel="noopener noreferrer nofollow" href="" target="_blank" class="awards-item w-inline-block">
+                <a rel="noopener noreferrer nofollow" href="https://t.me/UnAnonPortal" target="_blank"
+                  class="awards-item w-inline-block">
                   <div class="awards-logo"><img src="./assets/telegram.png" loading="lazy" width="148" height="58"
                       alt=", Catalyst Award" class="awards-logo-img" /></div>
                   <div class="awards-name">Telegram</div>
@@ -1883,8 +1933,8 @@
                     target="_blank" class="link-more link-more--sm w-inline-block">
                     <div scramble-text="">Buy Now</div>
                   </a></div>
-                <div class="solutions-actions-row"><a scramble-link="" rel="noopener noreferrer nofollow" href=""
-                    target="_blank" class="link-more link-more--sm w-inline-block">
+                <div class="solutions-actions-row"><a scramble-link="" rel="noopener noreferrer nofollow"
+                    href="https://t.me/UnAnonPortal" target="_blank" class="link-more link-more--sm w-inline-block">
                     <div scramble-text="">Visit TELEGRAM</div>
                   </a></div>
               </div>
@@ -1927,7 +1977,7 @@
                 <div class="solutions-feat-item">#UnAnon</div>
 
               </div>
-              <div class="solutions-actions">
+              <div class="solutions-actions" style="z-index: 100;">
                 <div class="solutions-actions-row"><a scramble-link="" rel="noopener noreferrer" href="" target="_blank"
                     class="link-more link-more--sm w-inline-block">
                     <div scramble-text="">Buy On UNISWAP</div>
@@ -2245,9 +2295,9 @@
         <div class="grid-column-pre">
           <div class="pre-heading">BUY FROM:</div>
         </div>
-        <div class="grid-column grid-column--special"><a rel="noopener noreferrer nofollow" href="" target="_blank"
-            class="popular-logo-link w-inline-block"><img src="./assets/uniswap.png" loading="lazy" width="114"
-              height="40" alt="" class="image-1031" /></a></div>
+        <div class="grid-column grid-column--special" style="z-index: 100;"><a rel="noopener noreferrer nofollow"
+            href="" target="_blank" class="popular-logo-link w-inline-block"><img src="./assets/uniswap.png"
+              loading="lazy" width="114" height="40" alt="" class="image-1031" /></a></div>
       </div>
       <!-- <div data-w-id="5b81ee13-745d-9c7e-0e5f-5c7cb5eb357e" style="opacity:0" class="marquee-block activate">
         <div class="marquee-heading mh-not-visible">
@@ -2593,7 +2643,7 @@
           <a href="">
             <i class='bx bxl-twitter'></i>
           </a>
-          <a href="">
+          <a href="https://t.me/UnAnonPortal">
             <i class='bx bxl-telegram'></i>
           </a>
           <a href="">
