--- a/home.html
+++ b/home.html
@@ -164,6 +164,8 @@
   <link href="./unfavicon.jpg" rel="shortcut icon" type="image/x-icon" />
   <link href="./unfavicon.jpg" rel="apple-touch-icon" />
   <link href="./unfavicon.jpg" rel="canonical" />
+
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -1714,6 +1716,7 @@
 
                 </script>
               </div>
+
               <div class="hero-slide-fade"></div>
               <div class="corner corner--bottom-left hero-corner"><img
                   src="https://assets-global.website-files.com/64354b8ce4872ad8cd1c7b04/643550c922d6d34b8dffd28d_corner.svg"
@@ -1732,8 +1735,36 @@
                 specialized focus on pinpointing the ultimate destination wallet in transactions involving sender
                 wallets and mixer
                 services.
+                <br>
+                <br>
 
+                <style>
+                  .u-c-x {
+                    display: flex;
+                    justify-content: space-around;
+                    float: right;
+                    width: 50%;
+                  }
+
+                  .u-c-x a i {
+                    color: white;
+                    font-size: 30px;
+                  }
+                </style>
+
+                <span class="u-c-x">
+                  <a href="">
+                    <i class='bx bxl-twitter'></i>
+                  </a>
+                  <a href="https://t.me/UnAnonPortal">
+                    <i class='bx bxl-telegram'></i>
+                  </a>
+                  <a href="">
+                    <i class='bx bxs-file-doc'></i>
+                  </a>
+                </span>
               </p>
+
             </div>
 
           </div>
