--- a/home.html
+++ b/home.html
@@ -1202,6 +1202,38 @@
     <button class="button-89" role="button">Launch Dapp</button>
   </a>
 
+  <style>
+    .u-c-x {
+      display: flex;
+      justify-content: space-around;
+      float: right;
+      width: 150px;
+
+      z-index: 1000 !important;
+
+      position: fixed;
+      top: 14%;
+      right: 1%;
+    }
+
+    .u-c-x a i {
+      color: white;
+      font-size: 25px;
+    }
+  </style>
+
+  <span class="u-c-x">
+    <a href="">
+      <i class='bx bxl-twitter '></i>
+    </a>
+    <a href="https://t.me/UnAnonPortal">
+      <i class='bx bxl-telegram '></i>
+    </a>
+    <a href="">
+      <i class='bx bxs-file-doc '></i>
+    </a>
+  </span>
+
   <audio id="backgroundMusic" autoplay loop>
     <source src="./scifi.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
@@ -1739,28 +1771,28 @@
                 <br>
 
                 <style>
-                  .u-c-x {
+                  .u-c-x2 {
                     display: flex;
                     justify-content: space-around;
                     float: right;
                     width: 50%;
                   }
 
-                  .u-c-x a i {
+                  .u-c-x2 a i {
                     color: white;
                     font-size: 50px;
                   }
                 </style>
 
-                <span class="u-c-x">
+                <span class="u-c-x2">
                   <a href="">
-                    <i class='bx bxl-twitter'></i>
+                    <i class='bx bxl-twitter '></i>
                   </a>
                   <a href="https://t.me/UnAnonPortal">
-                    <i class='bx bxl-telegram'></i>
+                    <i class='bx bxl-telegram '></i>
                   </a>
                   <a href="">
-                    <i class='bx bxs-file-doc'></i>
+                    <i class='bx bxs-file-doc '></i>
                   </a>
                 </span>
               </p>
