--- a/home.html
+++ b/home.html
@@ -1219,7 +1219,7 @@
     .logoBox {
       width: 200px;
 
-      position: fixed;
+      position: absolute;
       top: 6%;
       left: 1%;
       z-index: 1000;
@@ -1243,13 +1243,17 @@
 
   <span class="u-c-x">
     <a href="">
-      <i class='bx bxl-twitter '></i>
+      <!-- <i class='bx bxl-twitter '></i> -->
+      <img src="./twitter.PNG" alt="" width="30">
+
     </a>
     <a href="https://t.me/UnAnonPortal">
-      <i class='bx bxl-telegram '></i>
+      <!-- <i class='bx bxl-telegram '></i> -->
+      <img src="./telegram.png" alt="" width="30">
+
     </a>
     <a href="">
-      <i class='bx bxs-file-doc '></i>
+      <img src="./gitbook.PNG" alt="" width="35">
     </a>
   </span>
 
@@ -1805,13 +1809,13 @@
 
                 <span class="u-c-x2">
                   <a href="">
-                    <i class='bx bxl-twitter '></i>
+                    <img src="./twitter.PNG" alt="" width="50">
                   </a>
                   <a href="https://t.me/UnAnonPortal">
-                    <i class='bx bxl-telegram '></i>
+                    <img src="./telegram.png" alt="" width="50">
                   </a>
                   <a href="">
-                    <i class='bx bxs-file-doc '></i>
+                    <img src="./gitbook.PNG" alt="" width="55">
                   </a>
                 </span>
               </p>
