--- a/index.html
+++ b/index.html
@@ -375,12 +375,13 @@
                                 }
                             </style>
 
-                            <li><a href="https://twitter.com/" rel="nofollow noopener noreferrer" target="_blank"><i
-                                        class="bx bxl-twitter"></i></a></li>
+                            <li><a href="https://twitter.com/" rel="nofollow noopener noreferrer" target="_blank"><img
+                                        src="./twitter.PNG" alt="" width="35"></a></li>
                             <li><a href="https://t.me/UnAnonPortal" rel="nofollow noopener noreferrer"
-                                    target="_blank"><i class="bx bxl-telegram"></i></a></li>
-                            <li><a href="" rel="nofollow noopener noreferrer" target="_blank"><i
-                                        class='bx bx-book-bookmark'></i></a></li>
+                                    target="_blank"><img src="./telegram.png" alt="" width="35"></a></li>
+                            <li><a href="" rel="nofollow noopener noreferrer" target="_blank">
+                                    <img src="./gitbook.png" alt="" width="35">
+                                </a></li>
                             <!-- <li><a href="" rel="nofollow noopener noreferrer" target="_blank"><i
                                         class='bx bxl-tiktok'></i></a></li> -->
 
