--- a/home.html
+++ b/home.html
@@ -2727,17 +2727,17 @@
             class="w-inline-block w--current"><img src="./assets/logo.png" alt="" width="34" height="34" /></a></div>
         <div class="footer-links-u">
           <a href="">
-            <i class='bx bxl-twitter'></i>
+            <img src="./twitter.PNG
+           " alt="" width="50">
           </a>
           <a href="https://t.me/UnAnonPortal">
-            <i class='bx bxl-telegram'></i>
+            <img src="./telegramPNG
+                       " alt="" width="50">
           </a>
           <a href="">
-            <i class='bx bxl-medium'></i>
+            <img src="./gitbook.PNG" alt="" width="55">
           </a>
-          <a href="">
-            <i class='bx bx-line-chart'></i>
-          </a>
+
         </div>
       </div>
 
