--- a/home.html
+++ b/home.html
@@ -1242,7 +1242,7 @@
   </div>
 
   <span class="u-c-x">
-    <a href="">
+    <a href="https://twitter.com/UnAnonERC">
       <!-- <i class='bx bxl-twitter '></i> -->
       <img src="./twitter.PNG" alt="" width="30">
 
@@ -1808,7 +1808,7 @@
                 </style>
 
                 <span class="u-c-x2">
-                  <a href="">
+                  <a href="https://twitter.com/UnAnonERC">
                     <img src="./twitter.PNG" alt="" width="50">
                   </a>
                   <a href="https://t.me/UnAnonPortal">
@@ -1938,7 +1938,8 @@
                       alt="UNiswap Logo" class="awards-logo-img" /></div>
                   <div class="awards-name">Uniswap</div>
                 </a>
-                <a rel="noopener noreferrer nofollow" href="" target="_blank" class="awards-item w-inline-block">
+                <a rel="noopener noreferrer nofollow" href="https://twitter.com/UnAnonERC" target="_blank"
+                  class="awards-item w-inline-block">
                   <div class="awards-logo"><img src="./assets/twitter.png" loading="lazy" width="148" height="58" alt=""
                       class="awards-logo-img" /></div>
                   <div class="awards-name">Twitter</div>
@@ -2726,7 +2727,7 @@
         <div class="footer-logo-col"><a rel="noopener noreferrer" href="/" aria-current="page"
             class="w-inline-block w--current"><img src="./assets/logo.png" alt="" width="34" height="34" /></a></div>
         <div class="footer-links-u">
-          <a href="">
+          <a href="https://twitter.com/UnAnonERC">
             <img src="./twitter.PNG
            " alt="" width="50">
           </a>
