--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
                                 }
                             </style>
 
-                            <li><a href="https://twitter.com/" rel="nofollow noopener noreferrer" target="_blank"><img
-                                        src="./twitter.PNG" alt="" width="35"></a></li>
+                            <li><a href="https://twitter.com/UnAnonERC" rel="nofollow noopener noreferrer"
+                                    target="_blank"><img src="./twitter.PNG" alt="" width="35"></a></li>
                             <li><a href="https://t.me/UnAnonPortal" rel="nofollow noopener noreferrer"
                                     target="_blank"><img src="./telegram.png" alt="" width="35"></a></li>
                             <li><a href="" rel="nofollow noopener noreferrer" target="_blank">
