Add gitbook links

--- a/home.html
+++ b/home.html
@@ -1252,7 +1252,7 @@
       <img src="./telegram.png" alt="" width="30">
 
     </a>
-    <a href="">
+    <a href="https://unanon-whitepaper.gitbook.io/unanon-whitepaper-1.0/">
       <img src="./gitbook.PNG" alt="" width="35">
     </a>
   </span>
@@ -1814,7 +1814,7 @@
                   <a href="https://t.me/UnAnonPortal">
                     <img src="./telegram.png" alt="" width="50">
                   </a>
-                  <a href="">
+                  <a href="https://unanon-whitepaper.gitbook.io/unanon-whitepaper-1.0/">
                     <img src="./gitbook.PNG" alt="" width="55">
                   </a>
                 </span>
@@ -2735,7 +2735,7 @@
             <img src="./telegramPNG
                        " alt="" width="50">
           </a>
-          <a href="">
+          <a href="https://unanon-whitepaper.gitbook.io/unanon-whitepaper-1.0/">
             <img src="./gitbook.PNG" alt="" width="55">
           </a>
 
