--- a/index.html
+++ b/index.html
@@ -379,7 +379,8 @@
                                     target="_blank"><img src="./twitter.PNG" alt="" width="35"></a></li>
                             <li><a href="https://t.me/UnAnonPortal" rel="nofollow noopener noreferrer"
                                     target="_blank"><img src="./telegram.png" alt="" width="35"></a></li>
-                            <li><a href="" rel="nofollow noopener noreferrer" target="_blank">
+                            <li><a href="https://unanon-whitepaper.gitbook.io/unanon-whitepaper-1.0/"
+                                    rel="nofollow noopener noreferrer" target="_blank">
                                     <img src="./gitbook.png" alt="" width="35">
                                 </a></li>
                             <!-- <li><a href="" rel="nofollow noopener noreferrer" target="_blank"><i
