--- a/home.html
+++ b/home.html
@@ -2544,20 +2544,26 @@
             <div class="roadmap-card-body">
               <div class="w-richtext">
                 <ul role="list" class="">
-                  <li> Launch on Uniswap (ETH) &#9989;
+                  <li>
+                    <strong>Stealth Launch:</strong> Stealth launch of $UNANON on Ethereum with working mixer tracker
+                    dapp, covering
+                    HoudiniSwap + ChangeNow.
                   </li>
-                  <li> Community Creation &#9989;
+                  <li>
+                    <strong>Exchange Listings:</strong> Target major decentralized exchanges (DEXs) to list $UNANON,
+                    enhancing utility
+                    and liquidity.
                   </li>
-                  <li> CMC, CG Listing
+                  <li>
+                    <strong>Whitepaper Release:</strong> Publish advanced Whitepaper & Yellowpaper, detailing
+                    utility-focused protocol
+                    workflows.
                   </li>
-                  <li> Bounty Campaign
+                  <li>
+                    <strong>Cover Further Mixers:</strong> Extend dapp to be able to track CoinMix + RocketX through our
+                    AI algorithms
                   </li>
-                  <li> Community Viral Tactical campaign
-                  </li>
-                  <li> Website Revamp &#9989;
-                  </li>
-                  <li> NFT MINT &#9989;
-                  </li>
+
                 </ul>
               </div>
 
@@ -2590,16 +2596,23 @@
               <div class="w-richtext">
                 <ul role="list" class="">
 
-                  <li>cex listings
+                  <li> <strong>Strategic Utility Partnerships:</strong> Form utility-centric partnerships to enhance
+                    platform
+                    capabilities and provide tangible benefits to users.
                   </li>
-                  <li>retard merch
+                  <li> <strong>Token Gate Intiated:</strong> Holders Of 0.5% 0r 5000 $UNANON will be able to use the AI
+                    powered mixer
+                    tracker dapp
                   </li>
-                  <li>Mainstream Media (through viral content)
+                  <li> <strong>First Faze Rev hare:</strong> Update whitepaper with outline of rev share inner workings,
+                    taking weekly
+                    snapshots for rev share distribution
                   </li>
-                  <li>Merch Airdrop to Celebrities like Justin Bieber, Kevin Hart, The Rock (NFT Pillows)
+                  <li> <strong>Continuous Utility Improvements:</strong> Enhance and refine the dapp features based on
+                    community feedback
+                    and technological advancements.
                   </li>
-                  <li>Charity
-                  </li>
+
                 </ul>
               </div>
 
@@ -2632,7 +2645,20 @@
               <div class="w-richtext">
                 <ul role="list" class="">
                   <li>
-                    Partnership with M&M
+                    <strong> Global Marketing: </strong> Explore and execute on global marketing strategies to
+                    incoporate a wider community
+                    in the $UNANON ecosystem
+                  </li>
+                  <li>
+                    <strong> Incentive Programs: </strong> Implement incentive programs that directly contribute to the
+                    utility and
+                    functionality of the platform.
+                  </li>
+                  <li>
+                    <strong> Exploration and Diversification of Utility: </strong> Explore opportunities for
+                    diversification of UnAnon
+                    Ecoystem, including further cross-chain integrations for dapp and new innovative
+                    utility-driven features
                   </li>
 
                 </ul>
