--- a/home.html
+++ b/home.html
@@ -1247,7 +1247,7 @@
       <img src="./twitter.PNG" alt="" width="30">
 
     </a>
-    <a href="https://t.me/UnAnonPortal">
+    <a href="https://t.me/UnAnonEntry">
       <!-- <i class='bx bxl-telegram '></i> -->
       <img src="./telegram.png" alt="" width="30">
 
@@ -1811,7 +1811,7 @@
                   <a href="https://twitter.com/UnAnonERC">
                     <img src="./twitter.PNG" alt="" width="50">
                   </a>
-                  <a href="https://t.me/UnAnonPortal">
+                  <a href="https://t.me/UnAnonEntry">
                     <img src="./telegram.png" alt="" width="50">
                   </a>
                   <a href="https://unanon-whitepaper.gitbook.io/unanon-whitepaper-1.0/">
@@ -1944,7 +1944,7 @@
                       class="awards-logo-img" /></div>
                   <div class="awards-name">Twitter</div>
                 </a>
-                <a rel="noopener noreferrer nofollow" href="https://t.me/UnAnonPortal" target="_blank"
+                <a rel="noopener noreferrer nofollow" href="https://t.me/UnAnonEntry" target="_blank"
                   class="awards-item w-inline-block">
                   <div class="awards-logo"><img src="./assets/telegram.png" loading="lazy" width="148" height="58"
                       alt=", Catalyst Award" class="awards-logo-img" /></div>
@@ -2021,7 +2021,7 @@
                     <div scramble-text="">Buy Now</div>
                   </a></div>
                 <div class="solutions-actions-row"><a scramble-link="" rel="noopener noreferrer nofollow"
-                    href="https://t.me/UnAnonPortal" target="_blank" class="link-more link-more--sm w-inline-block">
+                    href="https://t.me/UnAnonEntry" target="_blank" class="link-more link-more--sm w-inline-block">
                     <div scramble-text="">Visit TELEGRAM</div>
                   </a></div>
               </div>
@@ -2757,7 +2757,7 @@
             <img src="./twitter.PNG
            " alt="" width="50">
           </a>
-          <a href="https://t.me/UnAnonPortal">
+          <a href="https://t.me/UnAnonEntry">
             <img src="./telegramPNG
                        " alt="" width="50">
           </a>
