--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
                             <li><a href="https://twitter.com/UnAnonERC" rel="nofollow noopener noreferrer"
                                     target="_blank"><img src="./twitter.PNG" alt="" width="35"></a></li>
-                            <li><a href="https://t.me/UnAnonPortal" rel="nofollow noopener noreferrer"
+                            <li><a href="https://t.me/UnAnonEntry" rel="nofollow noopener noreferrer"
                                     target="_blank"><img src="./telegram.png" alt="" width="35"></a></li>
                             <li><a href="https://unanon-whitepaper.gitbook.io/unanon-whitepaper-1.0/"
                                     rel="nofollow noopener noreferrer" target="_blank">
